# django-xmlrpc

./: .flake8  .gitignore  CHANGELOG  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  settings.py  setup.py
django_xmlrpc/: __init__.py  apps.py  decorators.py  dispatcher.py  registry.py  views.py
django_xmlrpc/locale/uk/LC_MESSAGES/: django.mo  django.po
